# NX-torrent-player

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  maket.psd  maketEPISODE.psd  maketMOVIE.psd
app/: appdata.hpp  browse.cpp  browse.hpp  config.cpp  config.hpp  http.cpp  http.hpp  json.cpp  json.hpp  main.cpp  player.cpp  player.hpp  settings.cpp  settings.hpp  stremio.cpp  stremio.hpp  update.cpp  update.hpp
assets/: NX-torrent-player-banner.psd  NX-torrent-player-newtest.psd  NX-torrent-player-nobg.psd  NX-torrent-player.psd
engine/: bencode.c  bencode.h  dhtclient.c  dhtclient.h  magnet.c  magnet.h  peer.c  peer.h  stream.c  stream.h  swarm.c  swarm.h  torrent.c  torrent.h  torrentfs.c  torrentfs.h  torrentfs2.c  torrentfs3.c  udp_tracker.c  udp_tracker.h  udpdiag.c  udpdiag.h  utpbridge.cpp  utpbridge.h
pctest/: build.sh  main.c  utpstub.c
pctest/compat/: switch.h
